--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -1,14 +1,23 @@
-<header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap px-0 py-3 shadow">
-    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">
-        <img src="https://www.acquaintsoft.com/wp-content/themes/acquaintsoft/images/acquaint_softtech_logo.png" width="120" height="25" alt="">
-    </a>
-    <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse"
-        data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navbar-nav">
-        <div class="nav-item text-nowrap">
-            <a class="nav-link px-3" href="#">Sign out</a>
-        </div>
+<header
+  class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap px-0 py-3 shadow"
+>
+  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">
+    <img src="assets/images/logo.svg" width="120" height="25" alt="" />
+  </a>
+  <button
+    class="navbar-toggler position-absolute d-md-none collapsed"
+    type="button"
+    data-bs-toggle="collapse"
+    data-bs-target="#sidebarMenu"
+    aria-controls="sidebarMenu"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="navbar-nav">
+    <div class="nav-item text-nowrap">
+      <a class="nav-link px-3" href="#">Sign out</a>
     </div>
+  </div>
 </header>
